# aerostack2_bam

./: betaflight_integration_demo.sh
as2_aerial_platforms/as2_platform_betaflight_sim/: CMakeLists.txt  COMPLETION_SUMMARY.md  README.md  demo_gazebo.sh  jetson_hardware_guide.sh  live_navigation_demo.sh  msp_demo.sh  navigation_guide.sh  package.xml  quick_demo.sh  test_navigation.sh
as2_aerial_platforms/as2_platform_betaflight_sim/config/: control_modes.yaml  gazebo_simulation.json  platform_config.yaml  platform_config_file.yaml
as2_aerial_platforms/as2_platform_betaflight_sim/include/as2_platform_betaflight_sim/: betaflight_platform.hpp  msp_helper.hpp
as2_aerial_platforms/as2_platform_betaflight_sim/launch/: betaflight_gazebo_launch.py  betaflight_sim_platform.launch.py  betaflight_simple.launch.py  betaflight_sitl_full.launch.py
as2_aerial_platforms/as2_platform_betaflight_sim/scripts/: betaflight_gazebo_tf_bridge.py  start_betaflight_sitl.sh
as2_aerial_platforms/as2_platform_betaflight_sim/src/: betaflight_platform.cpp  betaflight_sim_node.cpp  msp_helper.cpp
as2_simulation_assets/as2_gazebo_assets/: CMakeLists.txt
